// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screen: Nav/ActionBar displays network 1`] = `
<div
  className="css-1ea0fsh-root"
>
  <div
    className="css-1douz5d-actions"
  >
    <form
      className="open css-1r60gaq-searchBar-root"
      onSubmit={[Function]}
    >
      <div
        className="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-adornedStart css-1lapsgy-MuiInputBase-root"
        onClick={[Function]}
      >
        <div
          className="MuiInputAdornment-root MuiInputAdornment-positionStart css-ittuaa-MuiInputAdornment-root"
        >
          <span
            className="notranslate"
          >
            ​
          </span>
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
            data-testid="SearchIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </div>
        <input
          aria-label="searchBarPlaceholderDtag"
          className="MuiInputBase-input MuiInputBase-inputAdornedStart css-yz9k0d-MuiInputBase-input"
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="searchBarPlaceholderDtag"
          type="text"
          value=""
        />
      </div>
    </form>
    <div
      className="css-pjswcz-network open"
      id="network"
      toggleNetwork={[MockFunction]}
    />
    <div
      id="SettingsList"
    />
  </div>
  <div
    actionHeight={0}
    className="css-qgr2xh-networkList open"
    id="NetworkList"
  />
</div>
`;

exports[`screen: Nav/ActionBar it renders 1`] = `
<div
  className="css-1ea0fsh-root"
>
  <div
    className="css-1douz5d-actions"
  >
    <form
      className="css-1r60gaq-searchBar-root"
      onSubmit={[Function]}
    >
      <div
        className="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-adornedStart css-1lapsgy-MuiInputBase-root"
        onClick={[Function]}
      >
        <div
          className="MuiInputAdornment-root MuiInputAdornment-positionStart css-ittuaa-MuiInputAdornment-root"
        >
          <span
            className="notranslate"
          >
            ​
          </span>
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
            data-testid="SearchIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </div>
        <input
          aria-label="searchBarPlaceholderDtag"
          className="MuiInputBase-input MuiInputBase-inputAdornedStart css-yz9k0d-MuiInputBase-input"
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="searchBarPlaceholderDtag"
          type="text"
          value=""
        />
      </div>
    </form>
    <div
      className="css-pjswcz-network"
      id="network"
      toggleNetwork={[MockFunction]}
    />
    <div
      id="SettingsList"
    />
  </div>
  <div
    actionHeight={0}
    className="css-qgr2xh-networkList"
    id="NetworkList"
  />
</div>
`;
